src/org/ramadda/projects/rutgers/htdocs/rutgers/user.css
/* ... */
.active, .collapsible:hover {
/*  background-color: #fff; */
}

.collapsible:before {
    padding-right: 20px;
    font-size: 18px;
    content: '\2212';
    color: #000;
    font-weight: bold;
    float: left;
}

.collapsed:before {
  color: #000;
  content: "\002B";
      padding-right: 20px;
    font-size: 18px;
}

.content {
  padding: 0 18px;
  max-height: 0;
  xxx-overflow: hidden;
  transition: max-height 0.2s ease-out;
  background-color: #fff;
}

/* ----------------------------------------------------------- */

/* Anchor class needed to prevent sticky header from obscuring anchor link target */
/* 2024-09-24 LG - Remove Anchor Class */
/* a.anchor {
	position: relative;
	top: -360px;
	visibility: hidden;
}*/

/* ----------------------------------------------------------- */

/* 2024-07-31 LG: Add Button Oval Classes */

.oval-button {
  border-radius: 50px; /* sets the border radius to half of its width to create an oval shape */
  padding: 10px 20px; /* adjust padding as needed */
}

a.oval-button:hover {
    background: #C8C8C8;
}

/* ----------------------------------------------------------- */

/* 2024-07-31 LG: Background Image cover for SAS Plan */

.SASPlanImageBackground {
  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(117,117,129,0.21332282913165268) 99%, rgba(0,212,255,1) 100%), url("../images/SAS-Plan.jpg") no-repeat top center;
  min-height: 200px;
  max-height:250px;
  padding:30px;
  font-size: xx-large;
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  color: #fff;
  margin-top: 20px;
    margin-bottom: 20px;
      display: flex;
    justify-content: flex-start;
    align-items: center;
}

/* ----------------------------------------------------------- */

/* 2024-07-31 LG: Light gray border */

.lt-gray-border {
    border: solid 1px #ccc;
    padding: 20px;
}

/* ----------------------------------------------------------- */

/* 2024-08-12 LG: dark gray background on hover for buttons */
/* 2024-09-24 - COMMENTED out original code, this was causing an issue for anchor tags */
/* a.btn-primary:hover {
    background: #585858;
    border: #585858;
    color: #fff;
} */

/* 2024-09-24 LG - Adjusted oval button code */

a.oval-button:hover {
  background-color: #585858;
  border-color: #585858;
}

/* ----------------------------------------------------------- */

/* 2024-08-19 LG: Heading Sizes (larger heading sizes) */

.heading2 {
   line-height: 40px;
   font-size: 2.25rem;
}

.heading3 {
   font-size: 1.75rem;
}

.heading4 {
   font-size: 1.5rem;
}

.heading5 {
   font-size: 1.25rem;
}

/* ----------------------------------------------------------- */
/* 2024-09-10 LG: Use white image if dark background */
/* 2024-09-27 LG: adjusted for max width 300px */

@media (prefers-color-scheme: dark) {
.theme-image {
content: url('../images/RNBSAS_H_RED_RGB.png');
  min-width: 380px; 
  max-width: 380px;
}
}

/** ramadda - change svg reference*/
@media   (prefers-color-scheme: light) {
.theme-image {
content: url('Rutgers-SAS-Logo.svg');
    min-width: 380px; 
  max-width: 380px;
}
}

/* LG 2025-07-28 Add override for smaller screens */
/* Override for screens smaller than 420px */
@media (max-width: 420px) {
  .theme-image {
    min-width: 300px;
    max-width: 300px;
  }
}

/* ----------------------------------------------------------- */
/* 2024-09-30 LG: create for NON SAS Logo */

@media (prefers-color-scheme: dark) {
.theme-image-RNB {
content: url('../images/RNB_H_RED_RGB.png');
  min-width: 380px; 
  max-width: 380px;
}
}

@media   (prefers-color-scheme: light) {
.theme-image-RNB {
content: url('../images/RNB_H_RED_BLACK_RGB.svg');
    min-width: 380px; 
  max-width: 380px;
}
}

/* LG 2025-07-28 Add override for smaller screens */
/* Override for screens smaller than 420px */
@media (max-width: 420px) {
  .theme-image-RNB {
    min-width: 300px;
    max-width: 300px;
  }
}

/* ----------------------------------------------------------- */

/* 2024-09-10 LG: Create search glass specific size */

.search-glass {
  max-width:20px;
  max-height:20px;
}

/* ---------------------------------------------------- */
/* 2024-11-18 LG: Fix issue with Accordeon Menu arrows appearing in header on scroll */
span.toggler_icon {
    z-index: 9 !important;
}

/* ---------------------------------------------------- */
/* 2024-11-19 LG: Add Fixed width options for 350, 250 and 150 */
/* Can be used for buttons */

.fixed-width-350 {
    min-width: 350px;
    max-width: 350px;
}

.fixed-width-250 {
    min-width: 250px;
    max-width: 250px;
}

.fixed-width-150 {
    min-width: 150px;
    max-width: 150px;
}


/* -------------------------------------------------------------- */
/* 2024-11-20 LG: Fix issue with Caption Colors */

/* caption text */
.wf_caption span {
text-align: left; 
padding: 4px; 
color: #000 !important; 
background-color: #EDEDED !important; 
display: block;
}

/* -------------------------------------------------------------- */
/* 2025-01-27 LG: Create classes for footer identity area */

.sas-footer-logo-left {
    float: left !important;
}

.sas-footer-menu-right {
    padding-right: 10px;
    padding-top: 15px;
    float: right !important;
}

/* -------------------------------------*/
/* 2025-01-31 LG: adjust width for site break point */

@media (width >= 1430px) {
    .d-xl-block {
        display: block !important;
    }
}

/* -------------------------------------*/
/* 2025-02-05 LG: Add styles for boxes in Modules */

.box-blue {
  align-items: center;
    margin: 20px;
    background: #007FAC;
    padding: 20px;
    border-radius: 0px;
}

.box-gray {
  align-items: center;
    margin: 20px;
    background: #666666;
    padding: 20px;
    border-radius: 0px;
}

.box-scarlet {
  align-items: center;
    margin: 20px;
    background: #cc0033;
    padding: 20px;
    border-radius: 0px;
}
/* ... */

